Archive2/72/b49073970a3551/output
main.cpp:15:16: error: template argument for template template parameter must be a class template or type alias template
        : base<derived, T>()
               ^
main.cpp:15:11: error: expected class member or base class name
        : base<derived, T>()
          ^
main.cpp:15:11: error: expected '{' or ','
3 errors generated.
